# Jamie

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
agent/: __init__.py  controller.py  main.py  prompts.py  streamer.py
bot/: __init__.py  cua_client.py  handlers.py  main.py  session.py
docker/: Dockerfile.agent  Dockerfile.bot
docs/: ARCHITECTURE.md  BEADS_MAPPING.md  DEPLOYMENT.md  PRODUCT_SPEC.md  TECHNICAL_SPEC.md  TICKETS.md  USER_GUIDE.md  anthropic-computer-use.md  cua-framework.md  discord-py-api.md
jamie/: __init__.py
jamie/agent/: __init__.py  controller.py  main.py  prompts.py  sandbox.py  streamer.py  webhook_reporter.py
jamie/bot/: __init__.py  __main__.py  bot.py  cua_client.py  handlers.py  messages.py  session.py  url_patterns.py  voice.py  webhook.py
jamie/shared/: __init__.py  config.py  errors.py  logging.py  metrics.py  models.py  validation.py
scripts/: manual_test.md
shared/: __init__.py  config.py  errors.py  models.py
tests/: __init__.py  conftest.py
tests/agent/: __init__.py  test_controller.py  test_models.py  test_webhook_reporter.py
tests/bot/: __init__.py  test_cua_client.py  test_handlers.py  test_session.py
tests/integration/: __init__.py  test_e2e.py
tests/shared/: __init__.py  test_metrics.py
tests/test_agent/: __init__.py
tests/test_bot/: __init__.py  test_url_patterns.py
