[project]
name = "jamie"
version = "0.1.0"
description = "Discord streaming bot powered by CUA (Computer Use Agent)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jamie Team" }
]
keywords = ["discord", "streaming", "automation", "cua"]

dependencies = [
    # Discord bot
    "discord.py>=2.4.0",
    "aiohttp>=3.9.0",
    
    # CUA Controller
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    
    # CUA Agent (installed separately in sandbox)
    # "cua-computer",
    # "cua-agent",
    
    # Observability
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

agent = [
    # CUA dependencies for the agent component
    # These are typically installed in the Docker sandbox
    "cua-computer>=0.1.0",
    "cua-agent>=0.1.0",
    # HTTP controller and webhook callbacks
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
]

[project.scripts]
jamie-bot = "jamie.bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "agent", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
